more memory for tasks by default